--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -19,6 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/configure-pages@v3
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
