add debugging and changing configs
but still not sure if v5 deploy-pages is a good idea or not.

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -33,8 +33,10 @@ jobs:
           extended: true
       - name: Build
         run: hugo --minify
+      - name: Debug - List public directory
+        run: ls -la public/
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v4
         with:
           path: ./public
 
@@ -47,5 +49,5 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
 
