--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -38,7 +38,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: public
+          path: ${{ github.workspace }}/public
+          name: github-pages
 
   deploy:
     environment:
