--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -8,7 +8,6 @@ on:
 permissions:
   contents: read
   pages: write
-  packages: write
   id-token: write
 
 concurrency:
@@ -19,37 +18,47 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/configure-pages@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      - name: Install dependencies
-        run: npm install
+      - uses: actions/checkout@v3
+
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 'latest'
           extended: true
+
       - name: Build
-        run: hugo --minify
+        run: |
+          hugo --minify
+
       - name: Debug - List public directory
         run: ls -la public/
+        
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3.0.1
+        uses: actions/upload-artifact@v3
         with:
-          path: public
           name: github-pages
+          path: public/
+          if-no-files-found: error
 
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
+
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: github-pages
+          path: public
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-
+        with:
+          artifact_name: github-pages
