--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -45,8 +45,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
-          path: public/
-          if-no-files-found: error
+          path: public
+          compression-level: 0
 
   deploy:
     needs: build
@@ -61,12 +61,15 @@ jobs:
         with:
           name: github-pages
           path: public
-
       - name: Setup Pages
         uses: actions/configure-pages@v3
+
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: public
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-        with:
           artifact_name: github-pages
