--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: github-pages
+          name: hugo-build
           path: public
           compression-level: 0
 
@@ -59,7 +59,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: github-pages
+          name: hugo-build
           path: public
       - name: Setup Pages
         uses: actions/configure-pages@v3
