--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -18,42 +18,27 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          
-      - name: Install dependencies
-        run: npm install
-
+      - uses: actions/checkout@v4
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 'latest'
           extended: true
-
       - name: Build
-        run: |
-          hugo --minify
-
-      - name: Debug - List public directory
-        run: ls -la public/
-        
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3.0.1
+        run: hugo --minify
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          path: public
+          path: ./public
 
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
+    runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+
