--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build
         run: hugo --minify
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v4.6.0
+        uses: actions/upload-artifact@v4
         with:
           path: ./public
 
