--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -24,6 +24,12 @@ jobs:
         with:
           hugo-version: 'latest'
           extended: true
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+      - name: Install dependencies
+        run: npm install
       - name: Build
         run: hugo --minify
       - name: Upload artifact
